change encoding for files to utf-8

--- a/src/index.html
+++ b/src/index.html
@@ -1,206 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-
-    <!--[if lt IE 9]>
-    <script src="vendors/html5shiv.js"></script>
-    <![endif]-->
-
-    <meta name="viewport" content="width=device-width">
-
-    <link rel="stylesheet" href="vendors/reset.css">
-    <link rel="stylesheet" href="styles/main.css">
-
-
-</head>
-<body>
-<div class="content">
-    <header class="header">
-        <div class="wrapper">
-            <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
-            <div class="authorisation">
-                <button class="authorisation__sign-up">Sign up</button>
-                <button class="authorisation__log-in">Log in</button>
-            </div>
-            <div class="header-promo">
-                <h1 class="header-promo__share">SHARE YOUR HOLIDAY DREAMS</h1>
-
-                <div class="header-promo__find">And find the perfect partner to fullfill it</div>
-                <a href="#">
-                    <div class="header-promo__find-button">Find your holiday partner</div>
-                </a>
-            </div>
-        </div>
-    </header>
-    <div class="works">
-        <div class="wrapper">
-            <h3 class="works__title">How Urlaubsglück works?</h3>
-
-            <div class="steps">
-
-                <div class="steps__item">
-                    <img class="steps__item__picture" src="img/step1.png">
-
-                    <div class="steps__item__description">
-                        <button class="steps__item__description__number">STEP 1</button>
-                        <h3 class="steps__item__description__head">Sed leo enim, condimentum</h3>
-
-                        <p class="steps__item__description__info">Quisque libero libero, dictum non turpis in, luctus
-                            semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                    </div>
-                </div>
-
-                <div class="steps__item">
-                    <img class="steps__item__picture" src="img/step2.png">
-
-                    <div class="steps__item__description">
-                        <button class="steps__item__description__number">STEP 2</button>
-                        <h3 class="steps__item__description__head">Morbi velit risus</h3>
-
-                        <p class="steps__item__description__info">Nulla venenatis tempor dui in molestie. Nulla quis
-                            dictum purus, sit amet porttitor est.</p>
-                    </div>
-                </div>
-
-                <div class="steps__item">
-                    <img class="steps__item__picture" src="img/step3.png">
-
-                    <div class="steps__item__description">
-                        <button class="steps__item__description__number">STEP 3</button>
-                        <h3 class="steps__item__description__head">Sed leo enim, condimentum</h3>
-
-                        <p class="steps__item__description__info">Quisque libero libero, dictum non turpis in, luctus
-                            semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div class="meet-your-partner">
-        <div class="wrapper">
-            <h3 class="partner">Meet a partner for your best holiday</h3>
-            <ul>
-                <li class="partner__partners">
-                    <div class="partner__partners__photo">
-                        <img src="img/bradley_hunter.png">
-
-                        <div class="partner__partners__photo__logo-tv"><img src="img/tv.svg"></div>
-                    </div>
-                    <div class="partner__partners__name">Bradley Hunter</div>
-                    <div class="partner__partners__information">Based in Chicago. I love playing tennis and loud
-                        music.
-                    </div>
-                </li>
-                <li class="partner__partners">
-                    <div class="partner__partners__photo">
-                        <img src="img/heather_walker.png">
-
-                        <div class="partner__partners__photo__logo-cup"><img src="img/cup.svg"></div>
-                    </div>
-                    <div class="partner__partners__name">Heather Walker</div>
-                    <div class="partner__partners__information">I'm a happy person that loves cats and climbing on
-                        mountains.
-                    </div>
-                </li>
-                <li class="partner__partners">
-                    <div class="partner__partners__photo">
-                        <img src="img/lucas_marsha.png">
-
-                        <div class="partner__partners__photo__logo-bottle"><img src="img/bottle.svg"></div>
-                    </div>
-                    <div class="partner__partners__name">Lucas Marsha</div>
-                    <div class="partner__partners__information">I get my inspiration from nature and objects around me.
-                        I have a passion to colours, typography and skateboards.
-                    </div>
-                </li>
-                <li class="partner__partners">
-                    <div class="partner__partners__photo">
-                        <img src="img/bradley_hunter-2.png">
-
-                        <div class="partner__partners__photo__logo-plane"><img src="img/plane.svg"></div>
-                    </div>
-                    <div class="partner__partners__name">Bradley Hunter</div>
-                    <div class="partner__partners__information">Based in Chicago. I love playing tennis and loud
-                        music.
-                    </div>
-                </li>
-            </ul>
-            <button class="others">See other partners</button>
-        </div>
-    </div>
-    <div class="activity-ideas">
-        <div class="wrapper">
-            <h3 class="discover">Discover holiday activity ideas</h3>
-            <ul class="ideas">
-                <li class="ideas__kinds">
-                    <img src="img/sports.png">
-
-                    <p class="ideas__kinds__text">Sport and Activity</p>
-                </li>
-                <li class="ideas__kinds">
-                    <img src="img/wellness.png">
-
-                    <p class="ideas__kinds__text">Wellnes and Health</p>
-                </li>
-                <li class="ideas__kinds">
-                    <img src="img/extreme.png">
-
-                    <p class="ideas__kinds__text">Extreme Sports and Expeditions</p>
-                </li>
-                <li class="ideas__kinds">
-                    <img src="img/games.png">
-
-                    <p class="ideas__kinds__text">Games</p>
-                </li>
-                <li class="ideas__kinds-big">
-                    <img src="img/culture.png">
-
-                    <p class="ideas__kinds-big__text">Culture and Education</p>
-                </li>
-                <li class="ideas__kinds-big">
-                    <img src="img/relaxation.png">
-
-                    <p class="ideas__kinds-big__text">Relaxation</p>
-                </li>
-                <li class="ideas__kinds">
-                    <img src="img/travelling.png">
-
-                    <p class="ideas__kinds__text">Travelling</p>
-                </li>
-            </ul>
-            <h3 class="discover__bottom">Discover holiday activity ideas</h3>
-        </div>
-    </div>
-    <div class="find-partners">
-        <div class="wrapper">
-            <div class="interests"> Hi! What are your holiday interests?</div>
-            <label>
-                <input class="interests__input" value="Enter your interests">
-                <button class="interests__find">Search partners</button>
-            </label>
-        </div>
-    </div>
-
-    <div class="footer">
-        <div class="wrapper">
-            <a href="#" class="footer__logo">URLAUBSGLÜCK</a>
-            <ul class="footer__nav">
-                <li class="footer__points"><a class="footer__points__title" href="#">Company</a></li>
-                <li class="footer__points"><a class="footer__points__href" href="#">About</a></li>
-                <li class="footer__points"><a class="footer__points__href" href="#">Contacts</a></li>
-                <li class="footer__points"><a class="footer__points__href" href="#">Press</a></li>
-                <li class="footer__points"><a class="footer__points__href" href="#">Blog</a></li>
-            </ul>
-            <a class="footer__partners" href="#">Partners</a>
-            <ul class="footer__designed">
-                <li>DESIGNED BY</li>
-                <li><a href="#"><img class="footer__designed__areto-logo" src="img/areto.svg"></a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-</body>
-</html>
+<!doctype html><html lang="en"><head>    <meta charset="UTF-8">    <title>Document</title>    <!--[if lt IE 9]>    <script src="vendors/html5shiv.js"></script>    <![endif]-->    <meta name="viewport" content="width=device-width">    <link rel="stylesheet" href="vendors/reset.css">    <link rel="stylesheet" href="styles/main.css"></head><body><div class="content">    <header class="header">        <div class="wrapper">            <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>            <div class="authorisation">                <button class="authorisation__sign-up">Sign up</button>                <button class="authorisation__log-in">Log in</button>            </div>            <div class="header-promo">                <h1 class="header-promo__share">SHARE YOUR HOLIDAY DREAMS</h1>                <div class="header-promo__find">And find the perfect partner to fullfill it</div>                <a href="#">                    <div class="header-promo__find-button">Find your holiday partner</div>                </a>            </div>        </div>    </header>    <div class="works">        <div class="wrapper">            <h3 class="works__title">How Urlaubsglück works?</h3>            <div class="steps">                <div class="steps__item">                    <img class="steps__item__picture" src="img/step1.png">                    <div class="steps__item__description">                        <button class="steps__item__description__number">STEP 1</button>                        <h3 class="steps__item__description__head">Sed leo enim, condimentum</h3>                        <p class="steps__item__description__info">Quisque libero libero, dictum non turpis in, luctus                            semper lorem. Donec rhoncus a leo sit amet facilisis.</p>                    </div>                </div>                <div class="steps__item">                    <img class="steps__item__picture" src="img/step2.png">                    <div class="steps__item__description">                        <button class="steps__item__description__number">STEP 2</button>                        <h3 class="steps__item__description__head">Morbi velit risus</h3>                        <p class="steps__item__description__info">Nulla venenatis tempor dui in molestie. Nulla quis                            dictum purus, sit amet porttitor est.</p>                    </div>                </div>                <div class="steps__item">                    <img class="steps__item__picture" src="img/step3.png">                    <div class="steps__item__description">                        <button class="steps__item__description__number">STEP 3</button>                        <h3 class="steps__item__description__head">Sed leo enim, condimentum</h3>                        <p class="steps__item__description__info">Quisque libero libero, dictum non turpis in, luctus                            semper lorem. Donec rhoncus a leo sit amet facilisis.</p>                    </div>                </div>            </div>        </div>    </div>    <div class="meet-your-partner">        <div class="wrapper">            <h3 class="partner">Meet a partner for your best holiday</h3>            <ul>                <li class="partner__partners">                    <div class="partner__partners__photo">                        <img src="img/bradley_hunter.png">                        <div class="partner__partners__photo__logo-tv"><img src="img/tv.svg"></div>                    </div>                    <div class="partner__partners__name">Bradley Hunter</div>                    <div class="partner__partners__information">Based in Chicago. I love playing tennis and loud                        music.                    </div>                </li>                <li class="partner__partners">                    <div class="partner__partners__photo">                        <img src="img/heather_walker.png">                        <div class="partner__partners__photo__logo-cup"><img src="img/cup.svg"></div>                    </div>                    <div class="partner__partners__name">Heather Walker</div>                    <div class="partner__partners__information">I'm a happy person that loves cats and climbing on                        mountains.                    </div>                </li>                <li class="partner__partners">                    <div class="partner__partners__photo">                        <img src="img/lucas_marsha.png">                        <div class="partner__partners__photo__logo-bottle"><img src="img/bottle.svg"></div>                    </div>                    <div class="partner__partners__name">Lucas Marsha</div>                    <div class="partner__partners__information">I get my inspiration from nature and objects around me.                        I have a passion to colours, typography and skateboards.                    </div>                </li>                <li class="partner__partners">                    <div class="partner__partners__photo">                        <img src="img/bradley_hunter-2.png">                        <div class="partner__partners__photo__logo-plane"><img src="img/plane.svg"></div>                    </div>                    <div class="partner__partners__name">Bradley Hunter</div>                    <div class="partner__partners__information">Based in Chicago. I love playing tennis and loud                        music.                    </div>                </li>            </ul>            <button class="others">See other partners</button>        </div>    </div>    <div class="activity-ideas">        <div class="wrapper">            <h3 class="discover">Discover holiday activity ideas</h3>            <ul class="ideas">                <li class="ideas__kinds">                    <img src="img/sports.png">                    <p class="ideas__kinds__text">Sport and Activity</p>                </li>                <li class="ideas__kinds">                    <img src="img/wellness.png">                    <p class="ideas__kinds__text">Wellnes and Health</p>                </li>                <li class="ideas__kinds">                    <img src="img/extreme.png">                    <p class="ideas__kinds__text">Extreme Sports and Expeditions</p>                </li>                <li class="ideas__kinds">                    <img src="img/games.png">                    <p class="ideas__kinds__text">Games</p>                </li>                <li class="ideas__kinds-big">                    <img src="img/culture.png">                    <p class="ideas__kinds-big__text">Culture and Education</p>                </li>                <li class="ideas__kinds-big">                    <img src="img/relaxation.png">                    <p class="ideas__kinds-big__text">Relaxation</p>                </li>                <li class="ideas__kinds">                    <img src="img/travelling.png">                    <p class="ideas__kinds__text">Travelling</p>                </li>            </ul>            <h3 class="discover__bottom">Discover holiday activity ideas</h3>        </div>    </div>    <div class="find-partners">        <div class="wrapper">            <div class="interests"> Hi! What are your holiday interests?</div>            <label>                <input class="interests__input" value="Enter your interests">                <button class="interests__find">Search partners</button>            </label>        </div>    </div>    <div class="footer">        <div class="wrapper">            <a href="#" class="footer__logo">URLAUBSGLÜCK</a>            <ul class="footer__nav">                <li class="footer__points"><a class="footer__points__title" href="#">Company</a></li>                <li class="footer__points"><a class="footer__points__href" href="#">About</a></li>                <li class="footer__points"><a class="footer__points__href" href="#">Contacts</a></li>                <li class="footer__points"><a class="footer__points__href" href="#">Press</a></li>                <li class="footer__points"><a class="footer__points__href" href="#">Blog</a></li>            </ul>            <a class="footer__partners" href="#">Partners</a>            <ul class="footer__designed">                <li>DESIGNED BY</li>                <li><a href="#"><img class="footer__designed__areto-logo" src="img/areto.svg"></a></li>            </ul>        </div>    </div></div></body></html>
